--- a/flink-state-backends/flink-statebackend-rocksdb/pom.xml
+++ b/flink-state-backends/flink-statebackend-rocksdb/pom.xml
@@ -64,6 +64,8 @@ under the License.
 			<groupId>com.ververica</groupId>
 			<artifactId>frocksdbjni</artifactId>
 			<version>6.20.3-ververica-2.0</version>
+			<scope>system</scope>
+			<systemPath>/home/max509/IdeaProjects/flink/flink-state-backends/flink-statebackend-rocksdb/rocksdbjni-6.20.3-linux64.jar</systemPath>
 		</dependency>
 
 		<!-- test dependencies -->
